--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>zPDT Portal — Mainframe Home</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://www.ibm.com/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
@@ -88,19 +88,19 @@
           <span class="status" id="zosmf-status" title="Status unknown"></span>
           <h4><i class="fas fa-cogs"></i> z/OSMF</h4>
           <p>Web-based management for z/OS. Use this for system tasks, workflows, and REST APIs.</p>
-          <a href="https://s0w1.dal-ebis.ihost.com:10443/zosmf/LogOnPanel.jsp" target="_blank">Open z/OSMF</a>
+          <a href="https://s0w1.dal-ebis.ihost.com:10443/zosmf/LogOnPanel.jsp" target="_blank" rel="noopener noreferrer">Open z/OSMF</a>
         </div>
         <div class="card">
           <span class="status" id="zowe-status" title="Status unknown"></span>
           <h4><i class="fas fa-plug"></i> Zowe</h4>
           <p>Web UI and API gateway for mainframe tools. Helpful for file browsing, CLI, and extensions.</p>
-          <a href="https://s0w1.dal-ebis.ihost.com:7554/zlux/ui/v1/ZLUX/plugins/org.zowe.zlux.bootstrap/web/" target="_blank">Open Zowe</a>
+          <a href="https://s0w1.dal-ebis.ihost.com:7554/zlux/ui/v1/ZLUX/plugins/org.zowe.zlux.bootstrap/web/" target="_blank" rel="noopener noreferrer">Open Zowe</a>
         </div>
         <div class="card">
           <span class="status" id="qwt-status" title="Status unknown"></span>
           <h4><i class="fas fa-chart-line"></i> Db2 Query Workload Tuner</h4>
           <p>Tune and analyze Db2 workloads through the interactive Swagger UI.</p>
-          <a href="https://s0w1.dal-ebis.ihost.com:11002/tuningservice/v1/swagger-ui/index.html" target="_blank">Open QWT Swagger UI</a>
+          <a href="https://s0w1.dal-ebis.ihost.com:11002/tuningservice/v1/swagger-ui/index.html" target="_blank" rel="noopener noreferrer">Open QWT Swagger UI</a>
         </div>
       </div>
       <div class="back-top"><a href="#">Back to top ↑</a></div>
@@ -112,24 +112,29 @@
       <div class="grid">
         <div class="card">
           <h4><i class="fas fa-book"></i> Playbooks</h4>
-          <p>Neale’s playbook for Db2 Tools environment on GitHub.</p>
-          <a href="https://github.com/zeditor01/zowe_db2_tools/tree/main" target="_blank">Open Db2 Tools Playbook</a>
+          <p>Neale's playbook for Db2 Tools environment on GitHub.</p>
+          <a href="https://github.com/zeditor01/zowe_db2_tools/tree/main" target="_blank" rel="noopener noreferrer">Open Db2 Tools Playbook</a>
         </div>
         <div class="card">
           <h4><i class="fab fa-github"></i> JCL Library</h4>
           <p>Sample and production JCL jobs stored centrally for easy reference.</p>
-          <a href="https://github.com/benjaminthompson1/JCL" target="_blank">Open JCL Library</a>
+          <a href="https://github.com/benjaminthompson1/JCL" target="_blank" rel="noopener noreferrer">Open JCL Library</a>
         </div>
         <div class="card">
           <h4><i class="fas fa-book-open"></i> IBM Docs</h4>
           <p>Access IBM Knowledge Center for z/OS 3.1 and Db2 13.</p>
-          <a href="https://www.ibm.com/docs/en/zos/3.1.0" target="_blank">Open z/OS 3.1 Docs</a><br>
-          <a href="https://www.ibm.com/docs/en/db2-for-zos/13" target="_blank">Open Db2 13 Docs</a>
+          <a href="https://www.ibm.com/docs/en/zos/3.1.0" target="_blank" rel="noopener noreferrer">Open z/OS 3.1 Docs</a><br>
+          <a href="https://www.ibm.com/docs/en/db2-for-zos/13" target="_blank" rel="noopener noreferrer">Open Db2 13 Docs</a>
         </div>
         <div class="card">
           <h4><i class="fas fa-book-reader"></i> IBM Redbooks</h4>
           <p>Access IBM Redbooks for guidance, best practices, and implementation tips.</p>
-          <a href="https://www.redbooks.ibm.com/" target="_blank">Open IBM Redbooks</a>
+          <a href="https://www.redbooks.ibm.com/" target="_blank" rel="noopener noreferrer">Open IBM Redbooks</a>
+        </div>
+        <div class="card">
+          <h4><i class="fas fa-life-ring"></i> IBM Support</h4>
+          <p>Access IBM Support for case management, downloads, and technical assistance.</p>
+          <a href="https://www.ibm.com/mysupport/s/?language=en_US" target="_blank" rel="noopener noreferrer">Open IBM Support</a>
         </div>
       </div>
       <div class="back-top"><a href="#">Back to top ↑</a></div>
@@ -143,7 +148,7 @@
           <span class="status" id="guac-status" title="Status unknown"></span>
           <h4><i class="fas fa-desktop"></i> Apache Guacamole</h4>
           <p>Remote desktop gateway (browser-based) for accessing systems like SSH, RDP, VNC, etc.</p>
-          <a href="https://guac.mainframehome.net/#/" target="_blank">Open Guacamole</a>
+          <a href="https://guac.mainframehome.net/#/" target="_blank" rel="noopener noreferrer">Open Guacamole</a>
         </div>
       </div>
       <div class="back-top"><a href="#">Back to top ↑</a></div>
